iCalendar 1.1 (unreleased)
==========================

* Fixed a bug in caselessdicts popitem.
  (thanks to Michael Smith <msmith@fluendo.com>)
  
  